kube/descriptors/deploy-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pubsub-ingress-https
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: tls-secret
  backend:
    serviceName: pubsub-proxy
    servicePort: 80
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "pubsub-proxy"
  labels:
    app: "pubsub-proxy"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "pubsub-proxy"
  type: "NodePort"
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "pubsub-proxy"
  labels:
    app: "pubsub-proxy"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "pubsub-proxy"
  template:
    metadata:
      labels:
        app: "pubsub-proxy"
    spec:
      volumes:
      - name: google-cloud-key
        secret:
          secretName: clientsecret
      containers:
      - name: "pubsub-proxy"
        image: "gcr.io/[PROJECT_ID]/pubsub-proxy:latest"
        volumeMounts:
        - name: google-cloud-key
          mountPath: /var/secrets/google
